--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,55 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>at.sallaberger.thomas</groupId>
-  <artifactId>baitcontrol</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>baitcontrol</name>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
-        <configuration>
-          <source/>
-          <target/>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>at.sallaberger.thomas</groupId>
+	<artifactId>baitcontrol</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>baitcontrol</name>
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source />
+					<target />
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+		<properties>
+		<!-- use Java 1.8 -->
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.pi4j</groupId>
+			<artifactId>pi4j-core</artifactId>
+			<version>1.1</version>
+		</dependency>
+
+		<!-- for geolocation calculations -->
+		<!-- https://mvnrepository.com/artifact/com.peertopark.java/geocalc -->
+		<dependency>
+			<groupId>com.peertopark.java</groupId>
+			<artifactId>geocalc</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+		<!-- ==================================== -->
+
+		<!-- for creating the kml files -->
+		<!-- https://mvnrepository.com/artifact/de.micromata.jak/JavaAPIforKml -->
+		<dependency>
+			<groupId>de.micromata.jak</groupId>
+			<artifactId>JavaAPIforKml</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<!-- ==================================== -->
+	</dependencies>
+
+
 </project>
